Fixed up a couple layout and usability issues on mobile devices. Also ensure console is properly scrolled after being re-displayed via media query.

--- a/autom8_node/server/frontend/css/controls.less
+++ b/autom8_node/server/frontend/css/controls.less
@@ -58,4 +58,10 @@
             display: none;
         }
     }
+
+    @media only screen and (max-width: 460px) {
+        .stop-message {
+            display: none;
+        }
+    }
 }
