--- a/autom8_node/server/frontend/css/devices.less
+++ b/autom8_node/server/frontend/css/devices.less
@@ -46,6 +46,10 @@
             padding: 4px;
             font-size: 75%;
             cursor: pointer;
+
+            /* make easier to click on touch devices */
+            padding-left: 14px;
+            padding-bottom: 12px;
         }
 
         &.add-device {
